include/dss_capi.h

    DSS_CAPI_DLL double Reactors_Get_kV(void);
    DSS_CAPI_DLL void Reactors_Set_kV(double Value);
    DSS_CAPI_DLL double Reactors_Get_kvar(void);
    DSS_CAPI_DLL void Reactors_Set_kvar(double Value);
    DSS_CAPI_DLL int32_t Reactors_Get_Phases(void);
    DSS_CAPI_DLL void Reactors_Set_Phases(int32_t Integer);
    DSS_CAPI_DLL uint16_t Reactors_Get_IsDelta(void);
    DSS_CAPI_DLL void Reactors_Set_IsDelta(uint16_t Value);
    DSS_CAPI_DLL uint16_t Reactors_Get_Parallel(void);
    DSS_CAPI_DLL void Reactors_Set_Parallel(uint16_t Value);
    DSS_CAPI_DLL double Reactors_Get_LmH(void);
    DSS_CAPI_DLL void Reactors_Set_LmH(double Value);
    DSS_CAPI_DLL void Reactors_Set_Bus1(const char* Value);
    DSS_CAPI_DLL void Reactors_Set_Bus2(const char* Value);
    DSS_CAPI_DLL double Reactors_Get_R(void);
    DSS_CAPI_DLL void Reactors_Set_R(double Value);
    DSS_CAPI_DLL double Reactors_Get_X(void);
    DSS_CAPI_DLL void Reactors_Set_X(double Value);
    DSS_CAPI_DLL double Reactors_Get_Rp(void);
    DSS_CAPI_DLL void Reactors_Set_Rp(double Value);
    DSS_CAPI_DLL const char* Reactors_Get_RCurve(void);
    DSS_CAPI_DLL void Reactors_Set_RCurve(const char* Value);
    DSS_CAPI_DLL void Reactors_Set_LCurve(const char* Value);
    DSS_CAPI_DLL void Reactors_Get_Rmatrix(double** ResultPtr, int32_t* ResultDims);
    DSS_CAPI_DLL void Reactors_Get_Rmatrix_GR(void);
    DSS_CAPI_DLL void Reactors_Set_Rmatrix(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Reactors_Get_Xmatrix(double** ResultPtr, int32_t* ResultDims);
    DSS_CAPI_DLL void Reactors_Get_Xmatrix_GR(void);
    DSS_CAPI_DLL void Reactors_Set_Xmatrix(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Reactors_Get_Z1(double** ResultPtr, int32_t* ResultDims);
    DSS_CAPI_DLL void Reactors_Get_Z1_GR(void);
    DSS_CAPI_DLL int32_t Reactors_Get_SpecType(void);