src/v7/CAPI_Reactors.pas


function Reactors_Get_RCurve(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Reactors_Get_RCurve_AnsiString());
end;
//------------------------------------------------------------------------------
function Reactors_Get_Parallel(): Boolean; CDECL;
var
    pReactor: TReactorObj;
begin
    Result := FALSE;
    if ActiveReactor(pReactor) = NIL then
        exit;
    Result := pReactor.IsParallel;
end;
//------------------------------------------------------------------------------
function Reactors_Get_IsDelta(): Boolean; CDECL;
var
    pReactor: TReactorObj;
begin
    Result := FALSE;
    if ActiveReactor(pReactor) = NIL then
        exit;
    if pReactor.Connection <> TReactorConnection.Wye then
        Result := TRUE;
end;
//------------------------------------------------------------------------------
function Reactors_Get_kV(): Double; CDECL;
var
    pReactor: TReactorObj;
begin
    Result := 0.0;
    if ActiveReactor(pReactor) = NIL then
        exit;
    with pReactor do
    begin
        Result := kvrating;
    end
end;
//------------------------------------------------------------------------------
function Reactors_Get_kvar(): Double; CDECL;
var
    pReactor: TReactorObj;
begin
    Result := 0.0;
    if ActiveReactor(pReactor) = NIL then
        exit;
    Result := pReactor.kvarRating;
end;
//------------------------------------------------------------------------------
function Reactors_Get_LmH(): Double; CDECL;
var
    pReactor: TReactorObj;
begin
    Result := 0.0;
    if ActiveReactor(pReactor) = NIL then
        exit;
    Result := pReactor.L * 1000.0;
end;
//------------------------------------------------------------------------------
function Reactors_Get_Phases(): Integer; CDECL;
var
    pReactor: TReactorObj;
begin
    Result := 0;
    if ActiveReactor(pReactor) = NIL then
        exit;
    Result := pReactor.Nphases;
end;
//------------------------------------------------------------------------------
function Reactors_Get_SpecType(): Integer; CDECL;
var
    pReactor: TReactorObj;
begin
    Result := 0;
    if ActiveReactor(pReactor) = NIL then
        exit;
    Result := pReactor.SpecType;
end;
//------------------------------------------------------------------------------
function Reactors_Get_R(): Double; CDECL;
var
    pReactor: TReactorObj;
begin
    Result := 0.0;
    if ActiveReactor(pReactor) = NIL then
        exit;
    Result := pReactor.R;
end;
//------------------------------------------------------------------------------
function Reactors_Get_X(): Double; CDECL;
var
    pReactor: TReactorObj;
begin
    Result := 0.0;
    if ActiveReactor(pReactor) = NIL then
        exit;
    Result := pReactor.X;
end;
//------------------------------------------------------------------------------
function Reactors_Get_Rp(): Double; CDECL;
var
    pReactor: TReactorObj;
begin
    Result := 0.0;
    if ActiveReactor(pReactor) = NIL then
        exit;
    Result := pReactor.Rp;
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_IsDelta(Value: Boolean); CDECL;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    if Value then
        pReactor.Connection := TReactorConnection.Delta
    else    
        pReactor.Connection := TReactorConnection.Wye;
    ReactorPropSideEffects(TReactorProp.conn, pReactor);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Parallel(Value: Boolean); CDECL;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    pReactor.IsParallel := Value;
    ReactorPropSideEffects(TReactorProp.Parallel, pReactor);
end;
//------------------------------------------------------------------------------
procedure _ReactorSetbus1(pReactor: TReactorObj; const s: String);
var
    s2: String;
    i, dotpos: Integer;
   // Special handling for Bus 1
   // Set Bus2 = Bus1.0.0.0
begin
    with pReactor do
    begin
        SetBus(1, S);
     // Default Bus2 to zero node of Bus1 if not already defined. (Wye Grounded connection)
        if not Bus2Defined then
        begin
         // Strip node designations from S
            dotpos := Pos('.', S);
            if dotpos > 0 then
                S2 := Copy(S, 1, dotpos - 1)
            else
                S2 := Copy(S, 1, Length(S));  // copy up to Dot
            for i := 1 to Fnphases do
                S2 := S2 + '.0';
            SetBus(2, S2);
            IsShunt := TRUE;
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Bus1(const Value: PAnsiChar); CDECL;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    _ReactorSetbus1(pReactor, Value);
    ReactorPropSideEffects(TReactorProp.bus1, pReactor);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Bus2(const Value: PAnsiChar); CDECL;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    pReactor.SetBus(2, Value);
    ReactorPropSideEffects(TReactorProp.bus2, pReactor);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_LCurve(const Value: PAnsiChar); CDECL;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    pReactor.LCurve := Value;
    ReactorPropSideEffects(TReactorProp.LCurve, pReactor);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_RCurve(const Value: PAnsiChar); CDECL;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    pReactor.RCurve := Value;
    ReactorPropSideEffects(TReactorProp.RCurve, pReactor);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_kV(Value: Double); CDECL;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    pReactor.kvrating := Value;
    ReactorPropSideEffects(TReactorProp.kv, pReactor);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_kvar(Value: Double); CDECL;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    pReactor.kvarRating := Value;
    ReactorPropSideEffects(TReactorProp.kvar, pReactor);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_LmH(Value: Double); CDECL;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    pReactor.L := Value / 1000.0;
    ReactorPropSideEffects(TReactorProp.LmH, pReactor);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Phases(Value: Integer); CDECL;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    if Value = pReactor.NPhases then
        exit;
    pReactor.NPhases := Value;
    ReactorPropSideEffects(TReactorProp.phases, pReactor);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_R(Value: Double); CDECL;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    pReactor.R := Value;
    ReactorPropSideEffects(TReactorProp.R, pReactor);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_X(Value: Double); CDECL;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    pReactor.X := Value;
    ReactorPropSideEffects(TReactorProp.X, pReactor);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Rp(Value: Double); CDECL;
var
    pReactor: TReactorObj;
begin
    if ActiveReactor(pReactor) = NIL then
        exit;
    pReactor.Rp := Value;
    ReactorPropSideEffects(TReactorProp.Rp, pReactor);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Rmatrix(ValuePtr: PDouble; ValueCount: Integer); CDECL;
var
    Value: PDoubleArray;
    k: Integer;
    pReactor: TReactorObj;
begin
    Value := PDoubleArray(ValuePtr);
    if (ActiveReactor(pReactor) <> NIL) and (Sqr(pReactor.Nphases) = ValueCount) then
        with pReactor do
        begin
            for k := 0 to ValueCount do
            begin
                Rmatrix[k + 1] := ValuePtr[k];
            end;
            ReactorPropSideEffects(TReactorProp.Rmatrix, pReactor);
        end;
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Xmatrix(ValuePtr: PDouble; ValueCount: Integer); CDECL;
var
    Value: PDoubleArray;
    k: Integer;
    pReactor: TReactorObj;
begin
    Value := PDoubleArray(ValuePtr);
    if (ActiveReactor(pReactor) <> NIL) and (Sqr(pReactor.Nphases) = ValueCount) then
        with pReactor do
        begin
            for k := 0 to ValueCount do
            begin
                Xmatrix[k + 1] := ValuePtr[k];
            end;
            ReactorPropSideEffects(TReactorProp.Xmatrix, pReactor);
        end;
end;
//------------------------------------------------------------------------------
procedure Reactors_Get_Rmatrix(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
var
    Result: PDoubleArray;
    k: Integer;
    pReactor: TReactorObj;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if (ActiveReactor(pReactor) <> NIL) and (pReactor.Rmatrix <> NIL) then
        with pReactor do
        begin
            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (Sqr(Nphases) - 1) + 1);
            for k := 0 to ResultCount[0] do
            begin
                ResultPtr[k] := Rmatrix[k + 1];
            end;
        end;
end;

procedure Reactors_Get_Rmatrix_GR(); CDECL;
// Same as Reactors_Get_Rmatrix but uses global result (GR) pointers
begin
    Reactors_Get_Rmatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure Reactors_Get_Xmatrix(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
var
    Result: PDoubleArray;
    k: Integer;
    pReactor: TReactorObj;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if (ActiveReactor(pReactor) <> NIL) and (pReactor.Xmatrix <> NIL) then
        with pReactor do
        begin
            Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (Sqr(Nphases) - 1) + 1);
            for k := 0 to ResultCount[0] do
            begin
                ResultPtr[k] := Xmatrix[k + 1];
            end;
        end;
end;

procedure Reactors_Get_Xmatrix_GR(); CDECL;
// Same as Reactors_Get_Xmatrix but uses global result (GR) pointers
begin
    Reactors_Get_Xmatrix(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure Reactors_Get_Z1(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
var
    Result: PDoubleArray;
    pReactor: TReactorObj;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if ActiveReactor(pReactor) = NIL then
        exit;
    with pReactor do
    begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2);
        Result[0] := Z1.Re;
        Result[1] := Z1.Im;
    end;
end;

procedure Reactors_Get_Z1_GR(); CDECL;
// Same as Reactors_Get_Z1 but uses global result (GR) pointers
begin
    Reactors_Get_Z1(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;
